fix image border radius on mobile

--- a/_sass/minimal-light-no-dark-mode.scss
+++ b/_sass/minimal-light-no-dark-mode.scss
@@ -420,7 +420,7 @@ footer {
 
 
    .image.avatar img {
-        border-radius: 100%;
+        //border-radius: 100%;
         width: 117px;
         padding:20px;
       }
@@ -476,7 +476,7 @@ footer {
   }
 
   .image.avatar img {
-      border-radius: 100%;
+      //border-radius: 100%;
       width: 95px;
       padding:20px;
   }
